added bootstrap to index

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Harry Potter Wiki</title>
+	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.js">
 </head>
 <body>
 	This is where the content will go!
